--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 python-code
 .class
-
+.vscode
 
 # Created by https://www.gitignore.io/api/go,java,python
 # Edit at https://www.gitignore.io/?templates=go,java,python
